--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 title: Linux | Kara EKRAN
 description: Linux ve komut satırı ile yapılacaklar
 author: Sercan GEZER
-#github: https://github.com/agusmakmun
-#about: I'm Programmer for Python & Django. I've made quite a few web apps, especially on Django.
-#disqus_shortname: stackproblems
+github: https://github.com/agusmakmun
+about: Linux ve komut satırı ile yapılacaklar
+disqus_shortname: 
 google_analytics: UA-XXXXXXXX-Y
 
 enableTags: true
