--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
-baseurl = "/"
+baseurl = "https://example.com/"
 languageCode = "en-us"
-theme = "terminal"
+#theme = "hugo-theme-terminal"
 paginate = 5
 
 [params]
@@ -12,13 +12,13 @@ paginate = 5
 
 [languages]
   [languages.en]
-    title = "Kara Ekran #Linux"
+    title = "Terminal"
     subtitle = "A simple, retro theme for Hugo"
     keywords = ""
     copyright = ""
-    menuMore = "Daha fazlasını göster"
-    readMore = "Devamını okuyun"
-    readOtherPosts = "Diğer içerikleri görün"
+    menuMore = "Show more"
+    readMore = "Read more"
+    readOtherPosts = "Read other posts"
 
     [languages.en.params.logo]
       logoText = "Terminal"
