--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site settings
 title_left    : "Kara Ekran"
-title_right   : "#Linux" # default: ""
+title_right   : "   #Linux" # default: ""
 description   : "Linux terminale dair bir şeyler."
-keywords      : "Jekyll, theme, free, download, SEO, blog, web, minimalist, thinkspace"
+keywords      : "linux, bash, ubuntu, debian, unix, terminal, shell, xterm, command line, script"
 url           : https://linuxkaraekran.github.io/ # site url
 baseurl       : "" # apply repo name like "/myproject" if used under gh-pages branch, else (under master branch) just leave empty/blank
 cover         : "" # image uri like logo/cover image for site seo
@@ -38,7 +38,7 @@ plugins:
 # navbar pages
 navbar:
   - slug : about
-    title: About
+    title: Hakkımda
   - slug : blog
     title: Blog
 
