--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ url           : https://linuxkaraekran.github.io # site url
 baseurl       : "" # apply repo name like "/myproject" if used under gh-pages branch, else (under master branch) just leave empty/blank
 cover         : "" # image uri like logo/cover image for site seo
 
-google_analytics  : UA-XXXXX-XX
+google_analytics  : G-JV6L09S1HJ
 twitter_username  : ""
 comments_enabled  : true # if enabled (set to true), please provide your disqus_username
 disqus_shortname  : "karaekranlinux"
